Fix warning further to JDK and Antlr upgrades